# tool-suite-antigravity

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CONTEXT_GUIDED_SEARCH_IMPLEMENTATION.md  CRITICAL_ISSUES.md  FEATURE_ADDITION_GUIDE.md  FIXES_APPLIED.md  FULLSCREEN_OVERLAY_SOLUTION.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_UPDATED.md  README.md  SEARCH_IMPLEMENTATION_SUMMARY.md  SEARCH_IMPROVEMENT_ANALYSIS.md  SECURITY_AUDIT.md  STABILITY_RISK_REPORT.md  UX_POLISH_CHECKLIST.md  package-lock.json  package.json  tsconfig.json
.agent/rules/: app-description.md
apps/desktop/: package.json  tailwind.config.js
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: core.rs  lib.rs  shared.rs  system.rs
apps/desktop/src-tauri/src/commands/: auth.rs
apps/desktop/src-tauri/src/context/: category.rs
apps/desktop/src/components/: CommandPalette.tsx
apps/desktop/src/logic/api/: tauri.ts
apps/desktop/src/types/: bindings.ts  events.ts  settings.ts
apps/web/: auth.config.ts  auth.ts  middleware.ts  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: DeepLinkRedirect.tsx  OpenDesktopButton.tsx
apps/web/components/auth/: auth-form.tsx
apps/web/components/dashboard/: device-list.tsx
apps/web/lib/: ratelimit.ts
apps/web/lib/actions/: auth.ts  dashboard.ts
apps/web/lib/db/: adapter-client.ts  connect.ts  models.ts  queries.ts
apps/web/scripts/: dummy-device.ts
src/: App.css  App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  check_output.txt  u00261
src-tauri/src/: clipboard.rs  commands.rs  commands_widget.rs  config.rs  context.rs  core.rs  features.rs  lib.rs  main.rs  panel.rs  shared.rs
src-tauri/src/api/: commands.rs  error.rs
src-tauri/src/api/commands/: palette.rs  settings.rs  system.rs  window.rs
src-tauri/src/automation/: macos.rs  mod.rs
src-tauri/src/clipboard/: history.rs  mod.rs  monitor.rs
src-tauri/src/commands/: system.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/context/: detection.rs  mod.rs  ranking.rs
src-tauri/src/core/: clipboard.rs  features.rs
src-tauri/src/core/clipboard/: filter.rs  history.rs  monitor.rs  state.rs
src-tauri/src/core/context/: category.rs  detection.rs  ranking.rs  validation.rs
src-tauri/src/core/features/: calculator.rs  clipboard.rs  currency.rs  definition.rs  definition_client.rs  text_analyser.rs  text_analyser_logic.rs  time_converter.rs  translator.rs  unit_converter.rs  unit_converter_actions.txt
src-tauri/src/core/features/currency/: service.rs  types.rs
src-tauri/src/core/features/time_converter/: constants.rs  parsing.rs
src-tauri/src/core/features/translator/: service.rs  types.rs
src-tauri/src/core/security/: encryption.rs
src-tauri/src/features/currency/: mod.rs  service.rs  types.rs
src-tauri/src/features/translator/: mod.rs  service.rs
src-tauri/src/shared/: emit.rs  error.rs  errors.rs  events.rs  settings.rs  types.rs  types_test.rs
src-tauri/src/system/: automation.rs  window.rs
src-tauri/src/system/automation/: macos.rs
src-tauri/src/system/window/: handle.rs  nswindow.rs
src/components/: CommandPalette.tsx  CurrencyConverterWidget.tsx  SettingsWidget.tsx
src/components/ui/: button.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx  separator.tsx  tabs.tsx  textarea.tsx
src/components/widgets/: ClipboardHistoryWidget.tsx  CurrencyConverterWidget.tsx  DefinitionWidget.tsx  TextAnalyserWidget.tsx  TimeConverterWidget.tsx  TranslatorWidget.tsx  UnitConverterWidget.tsx
src/logic/api/: tauri.ts
src/logic/state/: store.ts
src/logic/types/: index.ts
src/logic/utils/: keywords.ts  ranking.ts
src/types/: bindings.ts  events.ts
(+47 files in other folders)
