[package]
name = "productivity-widgets"
version = "0.1.0"
description = "macOS Productivity Widgets - Quick access to translation, currency conversion, and more"
authors = ["Antigravity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "productivity_widgets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
chrono-english = "0.1"
urlencoding = "2.1"
mouse_position = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
cli-clipboard = "0.4"  # System-level clipboard access without app activation
iana-time-zone = "0.1"  # System timezone detection
unicode-segmentation = "1.10" # Text analysis (UAX #29 words/graphemes)
thiserror = "1"
rust_decimal = "1.33"
evalexpr = "11"
ts-rs = "10.0"
enum_dispatch = "0.3"
redb = "2"
meval = "0.2"

# macOS native window management
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
block = "0.1"
core-graphics = "0.23"
core-foundation = "0.9"
once_cell = "1.19"

# Workaround for Rust compiler ICE (Internal Compiler Error)
# Disable incremental compilation to avoid compiler bug in check_mod_deathness
[profile.dev]
incremental = false

[profile.release]
incremental = false
